apps/authelia/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/component: authelia
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/component: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/component: authelia
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9959"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: authelia
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia
          command:
            - authelia
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
            - name: metrics
              containerPort: 9959
              protocol: TCP
          volumeMounts:
            - name: authelia
              mountPath: /secrets
              readOnly: true
            - name: config-dir
              mountPath: /config
            - name: config
              mountPath: /configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 250m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 125Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: authelia
          secret:
            secretName: authelia
        - name: config
          configMap:
            name: authelia-config
        - name: config-dir
          emptyDir: {}
        - name: tmp
          emptyDir: {}
