apps/authelia/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/component: authelia
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/component: authelia
  ports:
    - name: http
      appProtocol: http
      protocol: TCP
      port: 80
      targetPort: http
