apps/authelia/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/component: authelia
spec:
  parentRefs:
    - name: cilium-gateway-system
      namespace: kube-system
      port: 443
  hostnames:
    - accounts.guedescloud.com.br
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
